feat: 新增圖片上傳、調整部分路由
1. 新增圖片上傳 api
2. 調整部分 user 路由
3. 更新 swagger 文件

issue:
